--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -286,3 +286,37 @@ hr {
 .bg-profile {
     background-color: #eae6da;
 }
+
+/* Welcome */
+.text-brown {
+    color: #4b352a;
+}
+.bg-card {
+    background-color: #a1d6b2;
+}
+.bg-card-hover:hover {
+    background-color: #8cd5a3;
+}
+
+@keyframes card-rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotateY(180deg);
+    }
+}
+.card-rotate {
+    animation: none;
+}
+.card-rotate:hover {
+    animation: card-rotate 0.5s forwards;
+}
+.mask-gradient-t-first {
+    -webkit-mask-image: linear-gradient(to top, transparent 0%, black 50%);
+    mask-image: linear-gradient(to top, transparent 0%, black 50%);
+}
+.mask-gradient-t-second {
+    -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 50%);
+    mask-image: linear-gradient(to bottom, transparent 0%, black 50%);
+}
